--- a/click.css
+++ b/click.css
@@ -81,19 +81,9 @@ p {
 
 /* Media Queries for Mobile Devices */
 @media only screen and (max-width: 800px) {
-  body{
-      text-align: center;
-  font-family: Arial, sans-serif;
-  background-image: url('retro.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  margin: 0;
-  padding: 0;
-  }
+
   .container {
-    max-width:100%;
+    max-width:400px;
     margin: 50px auto;
   }
 
