--- a/click.css
+++ b/click.css
@@ -83,7 +83,7 @@ p {
 @media only screen and (max-width: 800px) {
 
   .container {
-    max-width:700px;
+    max-width:200%;
     margin: 50px auto;
   }
 
